--- a/cfg/haproxy.cfg
+++ b/cfg/haproxy.cfg
@@ -35,17 +35,14 @@ defaults
 
 frontend stats
 	bind *:888
+	mode http
 	stats enable
 	stats refresh 5s
 	stats auth admin:123
 	stats uri /
 
-frontend http_front
-	bind *:88
-	stats uri /haproxy?stats
-	default_backend http_back
 
-backend http_back
-	balance roundrobin
-	server s1 127.0.0.1:8888 check
+listen web_tcp
+	bind :88
+	server s1 127.0.0.1:8888 check 
 	server s2 127.0.0.1:9999 check
